--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "psr-4": { "Zikula\\LegalModule\\": "" }
     },
     "require": {
-        "php": ">5.3.3"
+        "php": ">=5.3.3"
     },
     "extra": {
         "zikula": {
