--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "zikula/legal-module",
-    "description": "Change me description Module",
+    "description": "Provides an interface for managing the site's legal documents.",
     "type": "zikula-module",
     "license": "LGPL-3.0+",
     "authors": [
