--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "zikula/legal-module",
+    "version": "3.0.0",
     "description": "Provides an interface for managing the site's legal documents.",
     "type": "zikula-module",
     "license": "LGPL-3.0+",
@@ -13,11 +14,28 @@
         "psr-4": { "Zikula\\LegalModule\\": "" }
     },
     "require": {
-        "php": ">=5.3.3"
+        "php": ">5.4.0"
     },
     "extra": {
         "zikula": {
-            "class": "Zikula\\LegalModule\\ZikulaLegalModule"
+            "class": "Zikula\\LegalModule\\ZikulaLegalModule",
+            "core-compatibility": ">=1.4.1",
+            "displayname": "Legal",
+            "url": "legal",
+            "capabilities": {
+                "admin": {"route": "zikulalegalmodule_admin_modifyconfig"},
+                "user": {"route": "zikulalegalmodule_user_termsofuse"}
+            },
+            "securityschema": {
+                "ZikulaLegalModule::": "::",
+                "ZikulaLegalModule::legalNotice": "::",
+                "ZikulaLegalModule::termsOfUse": "::",
+                "ZikulaLegalModule::privacyPolicy": "::",
+                "ZikulaLegalModule::agePolicy": "::",
+                "ZikulaLegalModule::accessibilityStatement": "::",
+                "ZikulaLegalModule::cancellationRightPolicy": "::",
+                "ZikulaLegalModule::tradeConditions": "::"
+            }
         }
     }
 }
