--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -9,34 +9,34 @@ parameters:
 
 services:
     zikula_legal_module.container.link_container:
-        class: %zikula_legal_module.container.link_container.class%
+        class: "%zikula_legal_module.container.link_container.class%"
         arguments: ["@translator.default", "@jms_i18n_routing.router", "@zikula_permissions_module.api.permission", "@zikula_extensions_module.api.variable"]
         tags:
             - { name: zikula.link_container }
 
     twig.extension.zikula_legal_module:
-        class: %twig.extension.zikula_legal_module.class%
+        class: "%twig.extension.zikula_legal_module.class%"
         public: false
         arguments: ["@twig"]
         tags:
             - { name: twig.extension }
 
     zikula_legal_module.event_listener:
-        class: %zikula_legal_module.event_listener.class%
+        class: "%zikula_legal_module.event_listener.class%"
         arguments: ["@kernel", "@request_stack", "@twig", "@translator.default", "@jms_i18n_routing.router", "@zikula_core.common.csrf_token_handler", "@zikula_extensions_module.api.variable", "@zikula_users_module.current_user", "@zikula_legal_module.accept_policies_helper"]
         tags:
             - { name: kernel.event_subscriber }
 
     zikula_legal_module.eu_warning_listener:
-        class: %zikula_legal_module.eu_warning_listener.class%
+        class: "%zikula_legal_module.eu_warning_listener.class%"
         arguments: ["@translator.default", "@zikula_extensions_module.api.variable", "@zikula_core.common.theme.asset_helper", "%euwarning.stylesheet%"]
         tags:
             - { name: kernel.event_subscriber }
 
     zikula_legal_module.accept_policies_helper:
-        class: %zikula_legal_module.accept_policies_helper.class%
+        class: "%zikula_legal_module.accept_policies_helper.class%"
         arguments: ["@zikula_permissions_module.api.permission", "@zikula_extensions_module.api.variable"]
 
     zikula_legal_module.reset_agreement_helper:
-        class: %zikula_legal_module.reset_agreement_helper.class%
+        class: "%zikula_legal_module.reset_agreement_helper.class%"
         arguments: ["@doctrine.orm.entity_manager", "@zikula_permissions_module.api.permission", "%euwarning.stylesheet%"]
