--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -22,15 +22,15 @@ services:
     zikula_legal_module.event_listener:
         class: Zikula\LegalModule\Listener\UsersUiListener
         arguments:
-          - "@kernel"
           - "@request_stack"
           - "@twig"
           - "@translator.default"
           - "@jms_i18n_routing.router"
           - "@zikula_core.common.csrf_token_handler"
-          - "@zikula_extensions_module.api.variable"
           - "@zikula_users_module.current_user"
           - "@zikula_legal_module.accept_policies_helper"
+          - "@doctrine.orm.default_entity_manager"
+          - "@=service('zikula_extensions_module.api.variable').getAll('ZikulaLegalModule')"
         tags:
             - { name: kernel.event_subscriber }
 
@@ -38,9 +38,9 @@ services:
         class: Zikula\LegalModule\Listener\EuCookieWarningInjectorListener
         arguments:
           - "@translator.default"
-          - "@zikula_extensions_module.api.variable"
           - "@zikula_core.common.theme.asset_helper"
           - "%euwarning.stylesheet%"
+          - "@=service('zikula_extensions_module.api.variable').get('ZikulaLegalModule', 'eucookie', 0)"
         tags:
             - { name: kernel.event_subscriber }
 
@@ -48,7 +48,9 @@ services:
         class: Zikula\LegalModule\Helper\AcceptPoliciesHelper
         arguments:
           - "@zikula_permissions_module.api.permission"
-          - "@zikula_extensions_module.api.variable"
+          - "@zikula_users_module.current_user"
+          - "@zikula_users_module.user_repository"
+          - "@=service('zikula_extensions_module.api.variable').getAll('ZikulaLegalModule')"
 
     zikula_legal_module.reset_agreement_helper:
         class: Zikula\LegalModule\Helper\ResetAgreementHelper
