--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -29,9 +29,9 @@ services:
           - "@zikula_core.common.csrf_token_handler"
           - "@zikula_users_module.current_user"
           - "@zikula_legal_module.accept_policies_helper"
-          - "@doctrine.orm.default_entity_manager"
           - "@=service('zikula_extensions_module.api.variable').getAll('ZikulaLegalModule')"
           - "@form.factory"
+          - "@doctrine"
         tags:
             - { name: kernel.event_subscriber }
 
