--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "Zikula Development Team",
-            "homepage": "http://zikula.org"
+            "homepage": "https://ziku.la"
         }
     ],
     "autoload": {
