added binding for twig loader

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -8,6 +8,7 @@ services:
         public: false
         bind:
             $bundle: '@Zikula\LegalModule\ZikulaLegalModule'
+            $twigLoader: '@twig.loader'
 
     Zikula\LegalModule\:
         resource: '../../*'
