--- a/.styleci.yml
+++ b/.styleci.yml
@@ -33,7 +33,7 @@ enabled:
   - ternary_to_null_coalescing
 
 disabled:
-  - blank_line_before_break
+#  - blank_line_before_break
   - blank_line_before_continue
   - blank_line_before_declare
   - blank_line_before_throw
