--- a/.styleci.yml
+++ b/.styleci.yml
@@ -34,7 +34,7 @@ enabled:
 
 disabled:
 #  - blank_line_before_break
-  - blank_line_before_continue
+#  - blank_line_before_continue
   - blank_line_before_declare
   - blank_line_before_throw
   - blank_line_before_try
